<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KontakFragment">

    <!--15 Mei 2019-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TextView
                android:fontFamily="sans-serif-condensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_kontak"
                android:textSize="10pt"
                />
        </android.support.v7.widget.Toolbar>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/kontak"
            android:layout_width="101dp"
            android:layout_height="100dp"
            android:src="@drawable/profiles"
            android:layout_marginTop="@dimen/activity_vertical_margin" />

        <TextView
            android:fontFamily="sans-serif-condensed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/aria_pratomo"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/telp"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/telp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_telp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/telp"
                android:text="@string/telp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/email"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/gmail1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_gmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/email"
                android:text="@string/email"
                android:fontFamily="sans-serif-condensed"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/line"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/line1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/line"
                android:text="@string/line"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/wa"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/wa1"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_wa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/wa"
                android:text="@string/wa"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/twitter"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/twitter"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_twitter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/twitter"
                android:text="@string/twitter"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/ig"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ig"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_ig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ig"
                android:text="@string/ig"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">
            <ImageView
                android:id="@+id/fb"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/fb"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:id="@+id/btn_fb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/fb"
                android:text="@string/aria_pratomo_fb"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:layout_centerVertical="true"
                android:fontFamily="sans-serif-condensed"
                />
        </RelativeLayout>

    </LinearLayout>

</ScrollView>