<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendsFragment">

    <!--18 Mei 2019-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">
            <TextView
                android:fontFamily="sans-serif-condensed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_friends"
                android:textSize="10pt"
                />
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/ari"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_ari"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ari"
                android:text="@string/ari_abdul_majid"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/chandra"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_chandra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/chandra"
                android:text="@string/chandra_septian"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/adit"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_adit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/adit"
                android:text="@string/aditia_renaldi"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/luthfi"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_luthfi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/luthfi"
                android:text="@string/luthfi"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/habib"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_habib"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/habib"
                android:text="@string/muhammad_habib"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <ImageView
                android:id="@+id/ilyas"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/ava"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_ilyas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/ilyas"
                android:text="@string/muhammad_ilyas"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/rica"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/rica"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                />
            <Button
                android:fontFamily="sans-serif-condensed"
                android:id="@+id/btn_rica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/rica"
                android:text="@string/rica_rahmawati"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                />
        </RelativeLayout>




    </LinearLayout>

</ScrollView>